--- a/src/package.json
+++ b/src/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "express": "^4.18.1",
-    "newman": "^5.3.2"
+    "newman": "^5.3.2",
+    "@apideck/portman": "^1.21.1"
   },
   "devDependencies": {
     "eslint": "^8.20.0",
